[package]
name = "display-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
board = ["dep:rppal", "dep:ssd1306"]
sim = ["dep:embedded-graphics-simulator"]

[dependencies]
# Graphics library
embedded-graphics = "0.7.1"

# RPi specific
rppal = { version = "0.14.1", features = [ "hal" ], optional = true }
ssd1306 = { version = "0.7.1", optional = true }

# graphics simulator for high performance systems
embedded-graphics-simulator = { version = "0.4.0", optional = true }
